def graalJvmArgs = ['--enable-preview', '--add-opens=java.base/java.lang=ALL-UNNAMED']

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
  jvmArgs += graalJvmArgs
}

tasks.withType(JavaExec).configureEach {
  jvmArgs += graalJvmArgs
}

java {
  sourceCompatibility = JavaVersion.VERSION_20
  toolchain {
    vendor = JvmVendorSpec.GRAAL_VM
    languageVersion = JavaLanguageVersion.of(20)
  }
}

test {
  systemProperty("junit.jupiter.extensions.autodetection.enabled", true)
}